--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<table class="table table-striped">
+<table class="table table-striped table-dark">
     <thead class="thead-dark">
     <tr>
         <th scope="col">City Name</th>
