--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     {% if user %}
-    <title>Welcome to {{ user.username }}' site!</title>
+    <title>Welcome to {{ user.username }}'s site!</title>
     {% else %}
     <title>Welcome to My Site!</title>
     {% endif %}
@@ -21,8 +21,8 @@
 <!-- As a heading -->
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"><strong>{% if user %}{{ user.username }}' Homepage</strong>{% else %}
+<nav class="navbar navbar-expand-lg navbar-lg bg-dark">
+    <a class="navbar-brand" href="#"><strong>{% if user %}{{ user.username }}'s Homepage</strong>{% else %}
         <title>Welcome to My Homepage</title>
         {% endif %}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
