--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
-<table class="table table-striped table-dark">
-    <thead class="thead-dark">
+<table class="table">
+    <thead>
     <tr>
         <th scope="col">City Name</th>
         <th scope="col">Latitude</th>
@@ -15,7 +15,7 @@
     <tbody>
     {% for city in cities %}
     <tr>
-        <td>{{ city.fldName }}</td>
+        <td><a href="view/{{city.id}}">{{ city.fldName }}</a></td>
         <td>{{ city.fldLat }}</td>
         <td>{{ city.fldLong }}</td>
         <td>{{ city.fldCountry }}</td>
